--- a/core/pom.xml
+++ b/core/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>commons-dbcp2</artifactId>
             <version>2.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.7</version>
+        </dependency>
     </dependencies>
 
     <build>
